--- a/index.html.html
+++ b/index.html.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MétIA - IA Spécialisée par Secteur Métier</title>
+    <title>L’IA qui comprend votre métierr</title>
     <style>
         * {
             margin: 0;
