--- a/index.html.html
+++ b/index.html.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L’IA qui comprend votre métierr</title>
+    <title>MétIA - IA Spécialisée par Secteur Métier</title>
     <style>
         * {
             margin: 0;
@@ -802,7 +802,7 @@
     <main>
         <section class="hero">
             <div class="container">
-                <h1>L'IA Spécialisée par Métier</h1>
+                <h1>L'IA qui comprend votre métier</h1>
                 <p>Des solutions d'intelligence artificielle expertes dans chaque secteur d'activité. Transformez votre métier avec des agents IA qui comprennent parfaitement vos spécificités sectorielles.</p>
                 <div class="hero-buttons">
                     <a href="#agents" class="cta-button">Découvrir nos Agents</a>
